# wpf-gpu-raster

./: .gitignore  BufferDispenser.cpp  BufferDispenser.h  CHANGES.md  Cargo.toml  MILMatrix.h  MILRect.h  Makefile  README.md  Rect.h  ShapeBase.h  aarasterizer.cpp  basetypes.h  build.rs  dynarray.h  dynarrayimpl.cpp  hwvertexbuffer.cpp  instrumentation.h  main.cpp  notes  precomp.hpp
common/shared/: utils.h
examples/: draw.rs  obj-output.rs  simple.rs
geometry/: utils.h
src/: BaseMatrix.h  BufferDispenser.cpp  HwVertexBuffer.h  Makefile  MultiSpaceRectF.inl  Rect.h  Waffler.h  aacoverage.rs  aarasterizer.cpp  aarasterizer.h  aarasterizer.rs  bezier.rs  c_bindings.rs  dynarrayimpl.cpp  fix.h  fix.rs  geometry_sink.rs  helpers.rs  hwrasterizer.cpp  hwrasterizer.rs  hwvertexbuffer.cpp  hwvertexbuffer.rs  intsafe.h  lib.rs  main.cpp  matrix.rs  notes  nullable_ref.rs  precomp.hpp  real.cpp  real.h  real.rs  sal.h  tri_rasterize.rs  types.rs  waffler.cpp  wincodec_private_generated.h  windef.h
