[package]
name = "wpf-gpu-raster"
version = "0.1.0"
edition = "2021"


[profile.release]
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
png = "0.17.2"
usvg = "0.4"
euclid = "0.22.6"
cfor = "1.1.0"
scopeguard = "1.1.0"
typed-arena = { path = "../../src/rust-typed-arena/" }
